samples/_failures_safe/1761248345_ebd1b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2051c029.c: In function ‘main’:
./samples/SAFE/__tmp_2051c029.c:158:21: error: expected declaration or statement at end of input
  158 |                     print_matrix(&result, "Result");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_2051c029.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2051c029.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2051c029.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2051c029.c:158:21: error: expected declaration or statement at end of input
